--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,28 @@
 .phpunit.result.cache
 /phpunit.xml
 ###< symfony/phpunit-bridge ###
+
+###> symfony/webpack-encore-bundle ###
+/node_modules/
+/public/build/
+npm-debug.log
+yarn-error.log
+###< symfony/webpack-encore-bundle ###
+
+# macOS
+.DS_Store
+
+# IDE / Editor
+/.idea
+
+# Dotenv environment variable files
+.env
+.env.development.local
+.env.test.local
+.env.production.local
+.env.local
+
+# Package Managers (Compoer, NPM, Yarn)
+composer.lock
+package-lock.json
+yarn.lock
